udpate auto search